--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,3 +6,15 @@ body {
     font-weight: 400;
     font-size: 14px;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
+    margin-top: 0;
+    margin-bottom: 0;
+}
