--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@
 } */
 
 /*  */
-body {
+/* body {
   color: var(--primary-text-color);
   background-color: var(--white-color);
   font-family: Roboto, sans-serif;
@@ -118,7 +118,7 @@ ul {
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
-}
+} */
 
 /* шапка */
 /* .header {
