--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,7 +1,7 @@
 body {
     color: var(--primary-text-color);
     background-color: var(--white-color);
-    font-family: Roboto, sans-serif;
+    font-family: var(--main-font);
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
