--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,4 +1,5 @@
 :root {
+    // colors
     --white-color: #ffffff;
     --primary-text-color: rgba(33, 33, 33, 1);
     --secondary-text-color: rgba(117, 117, 117, 1);
@@ -42,6 +43,9 @@
     --callbackform-agreemant-text: rgba(117, 117, 117, 1);
     --call-back-form-checkbox-border-color: rgba(33, 33, 33, 1);
     --checkbox-button-hover-color: #188ce8;
+    // fonts
+    --main-font: Roboto,sans-serif;
+    --logo-font: Raleway,sans-serif;
 
     --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
